some fix and prepare to deploy 1.0 version